--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -20,5 +20,14 @@
         <img src="https://www.alura.com.br/assets/img/home/alura-logo.svg" alt="" class="alura-logo">
       </a>
       
+    <script>
+      var listaFilmes = ["https://upload.wikimedia.org/wikipedia/pt/9/9e/Suits_temporada_2.jpg", "https://upload.wikimedia.org/wikipedia/pt/e/ed/Tropa_de_Elite_2.jpg", "https://br.web.img3.acsta.net/pictures/14/10/30/19/02/198128.jpg", "https://vignette.wikia.nocookie.net/peaky-blinders/images/0/0a/Peaky_Blinders_4.jpg/revision/latest?cb=20180110141315"]
+
+for (var i = 0; i < listaFilmes.length; i++) {
+  document.write("<img src=" + listaFilmes[i] + ">")
+}
+
+
+    </script>  
 </body>
 </html>
